style.css
* {
    padding: 0;
    margin: 0;
    border: 0;
    font-family: 'Ubuntu Mono', 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

.outer {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    height: 100%;
}

.placeholder {
    display: none;
    float: left;
}

.header {
    display: grid;
    background-color: slategray;
    transform: skewY(-20deg);
    z-index: 0;
    width: 100%;
    height: 1000px;
    margin-top: -500px;
    box-shadow: 5px 5px 5px slategray;
}

.portrait1 {
    display: grid;
    grid-row: 9 / 12;
    grid-column: 5 / 10;
    position: absolute;
    background-image: url('pexels-olly-3760809.jpg');
    height: 500px;
    width: 500px;
    z-index: 4;
    background-position: center;
    background-size: cover;
    box-shadow: 5px 5px 5px slategray;
}

.name,
.about_text {
    font-size: 50px;
}

.about {
    position: absolute;
    display: flex;
    grid-row: 10 / 15;
    grid-column: 8 / 15;
    /* grid-template-rows: repeat(10, 1fr);
    grid-template-columns: repeat(10, 1fr); */
    height: 500px;
    width: 500px;
    background-color: white;
    box-shadow: 5px 5px 5px slategray;
    z-index: 3;
}

.ptext {
    position: absolute;
    /* display: grid; */
    grid-row: 4 / 7;
    z-index: 3;
}

.header_content {
    position: relative;
    display: grid;
    grid-template-columns: repeat(15, 1fr);
    grid-template-rows: repeat(15, 1fr);
    margin-top: 200px;
    z-index: 0;
    transform: skewY(20deg);
}

.icon_container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-row: 9/10;
    grid-column: 9/10;
}

.devicon-twitter-original,
.devicon-linkedin-plain,
.devicon-github-original {
    margin: 10px;
    font-size: 30px;
}

.devicon-github-original {
    display: grid;
    grid-column: 1/2;
}

.devicon-linkedin-plain {
    display: grid;
    grid-column: 2/3;
}

.devicon-twitter-original {
    display: grid;
    grid-column: 3/4;
}

.main {
    margin-top: 550px;
    display: flex;
    flex-direction: column;
    width: 100%;
}

.card_container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    width: 100% - 100px;
    gap: 100px;
    margin: 100px;
}

.card {
    display: flex;
    flex-direction: column;
    width: 400px;
    height: 500px;
    box-shadow: 5px 5px 5px slategray;
    border: 1px solid black;
    box-sizing: border-box;
}

.screenshot1 {
    width: 100%;
    height: 300px;
    background-color: rebeccapurple;
    color: white;
    font-size: 50px;
    text-align: center;
    align-content: center;
}

.screenshot2 {
    width: 100%;
    height: 300px;
    background-color: slateblue;
    color: white;
    font-size: 50px;
    text-align: center;
    align-content: center;
}

.screenshot3 {
    width: 100%;
    height: 300px;
    background-color: green;
    color: white;
    font-size: 50px;
    text-align: center;
    align-content: center;
}

.screenshot4 {
    width: 100%;
    height: 300px;
    background-color: red;
    color: white;
    font-size: 50px;
    text-align: center;
    align-content: center;
}

.screenshot5 {
    width: 100%;
    height: 300px;
    background-color: orangered;
    color: white;
    font-size: 50px;
    text-align: center;
    align-content: center;
}

.screenshot6 {
    width: 100%;
    height: 300px;
    background-color: orchid;
    color: white;
    font-size: 50px;
    text-align: center;
    align-content: center;
}

.project {
    display: flex;
    font-size: 30px;
    align-items: center;
    justify-content: space-between;
    margin: 10px;
}

.devicon-github-original .colored .project {
    font-size: 30px;
}

.icons {
    margin: 10px;
    display: flex;
}

.desc {
    margin: 10px;
}

.mywork {
    font-size: 50px;
    margin-left: 50px;
}

.bottom {
    display: flex;
    margin-top: 100px;
    background-color: slategray;
    width: 100%;
}

.bottomtext {
    display: flex;
    flex-direction: column;
    margin: 50px;
    width: 50%;
}

.contactme,
.contacttext,
.address,
.phone,
.email {
    margin: 10px;
}

.contactme {
    font-size: 50px;
}

.bottomphoto {
    display: flex;
    background-image: url('pexels-olly-3760778.jpg');
    height: 500px;
    width: 600px;
    background-position: center;
    background-size: cover;
    margin: 50px;
}

.phone {
    display: flex;
    align-items: center;
}

.email {
    display: flex;
    align-items: center;
}

.icon_container_bot {
    display: flex;
    justify-content: flex-start;
}

.svg_phone {
    flex-shrink: 0;
}

@media (max-width:500px) {

    .header {
        margin-top: -100px;
        height: 100vw;
    }

    .header_content {
        display: flex;
        flex-direction: column;
        align-items: center;
        margin-top: 300px;
        max-height: 30vh;
    }

    .portrait1 {
        display: flex;
        width: 75vw;
        height: 300px;
        align-items: flex-end;
        justify-content: center;
    }

    .icon_container {
        display: flex;
        justify-content: space-evenly;
    }

    .mywork {
        margin: 100px 0 0 0;
        align-items: center;
    }

    .name {
        font-size: 40px;
        color: white;
    }

    .about {
        position: relative;
        margin-top: 300px;
        display: flex;
        flex-direction: column;
        max-width: 75vw;
        box-shadow: none;
    }

    .about_text {
        position: relative;
        font-size: 40px;
        display: flex;
        z-index: auto;
        justify-content: center;
    }

    .ptext {
        position: relative;
        display: flex;
    }

    .main {
        align-items: center;
    }

    .project {
        font-size: 25px;
    }

    .card_container {
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        align-items: center;
        width: 100%;
        gap: 100px;
    }

    .card {
        display: flex;
        flex-direction: column;
        width: 300px;
        height: 400px;
        box-shadow: 5px 5px 5px slategray;
        border: 1px solid black;
        box-sizing: border-box;
    }

    .bottom {
        display: flex;
        flex-direction: column;
        margin-top: 100px;
        background-color: slategray;
        width: 100%;
    }

    .contactme {
        font-size: 30px;
        text-align: center;
    }

    .svg_email {
        width: 30px;
    }

    .bottomphoto {
        display: flex;
        background-image: url('pexels-olly-3760778.jpg');
        height: 400px;
        width: 100%;
        background-position: center;
        background-size: cover;
        margin: 0;
    }
}

@media (500px < width < 1000px) {

    .header_content {
        position: relative;
        display: grid;
        margin: 50px 450px 200px -50px;
    }

    .portrait1 {
        display: grid;
        position: absolute;
        z-index: 3;
    }

    .about {
        display: block;
        grid-row: 13 / 16;
        grid-column: 12 / 16;
        position: absolute;
        z-index: 2;
        text-wrap: wrap;
    }

    .about_text {
        font-size: 40px;
    }

    .icon_container {
        display: flex;
        justify-content: flex-end;
    }

    .placeholder {
        display: block;
        float: left;
        width: 315px;
        height: 300px;
    }

    .project {
        font-size: 25px;
    }

    .name {
        justify-content: center;
    }

    .card {
        display: flex;
        flex-direction: column;
        width: 300px;
        height: 400px;
        box-shadow: 5px 5px 5px slategray;
        border: 1px solid black;
        box-sizing: border-box;
    }

    .card_container {
        margin: 50px;
    }

    .contactme {
        font-size: 40px;
    }
}

